# ProjectPhronesis

./: .gitignore  .gitmodules  CMakeLists.txt  ProjectPhronesis.sln  compileall.bat  dcompileall.bat  main.cpp  phro_anim_unit.cpp  phro_anim_unit.hpp  phro_animation_manager.cpp  phro_animation_manager.hpp  phro_data.hpp  phro_frame_info.cpp  phro_frame_info.hpp  phro_game.cpp  phro_game.hpp  phro_game_state.cpp  phro_game_state.hpp  phro_menu_state.cpp  phro_menu_state.hpp  phro_pause_state.cpp  phro_pause_state.hpp  phro_resource_manager.cpp  phro_resource_manager.hpp  phro_state.cpp  phro_state.hpp  phro_state_stack.cpp  phro_state_stack.hpp  phro_title_state.cpp  phro_title_state.hpp  readme.md
CMake/: FindGLFW3.cmake  FindGLM.cmake
Phronesis/: CMakeLists.txt  Phronesis.vcxproj  Phronesis.vcxproj.filters
Phronesis/Sources/: Core.hpp  Phronesis.hpp  StdAfx.cpp  StdAfx.hpp
Phronesis/Sources/Core/: Engine.cpp  Engine.hpp
Phronesis/Sources/Phronesis/: Components.hpp  Core.hpp  FileIO.hpp  Graphics.hpp  Maths.hpp  SceneManagement.hpp  Utilities.hpp
Phronesis/Sources/Phronesis/Components/: Camera.cpp  Camera.hpp  Circle.cpp  Circle.hpp  Render2D.cpp  Render2D.hpp
Phronesis/Sources/Phronesis/Components/Platform/: SFMLCamera.cpp  SFMLCamera.hpp  SFMLRender2D.cpp  SFMLRender2D.hpp
Phronesis/Sources/Phronesis/Core/: Engine.cpp  Engine.hpp  Game.cpp  Game.hpp  Log.cpp  Log.hpp  Module.cpp  Module.ext.hpp  Module.hpp  ModuleHandler.cpp  ModuleHandler.hpp
Phronesis/Sources/Phronesis/FileIO/: BinaryFile.cpp  BinaryFile.hpp  Directory.cpp  Directory.hpp
Phronesis/Sources/Phronesis/Graphics/: Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  DescriptorSets.cpp  DescriptorSets.hpp  FrameBuffers.cpp  FrameBuffers.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Instance.cpp  Instance.hpp  LogicalDevice.cpp  LogicalDevice.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Pipeline.cpp  Pipeline.hpp  QueueFamilyIndices.cpp  QueueFamilyIndices.hpp  RenderInstance.hpp  RenderPass.cpp  RenderPass.hpp  RenderUtils.cpp  RenderUtils.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Surface.cpp  Surface.hpp  SwapChain.cpp  SwapChain.hpp  SwapChainSupportDetails.cpp  SwapChainSupportDetails.hpp  UniformBuffer.cpp  UniformBuffer.hpp  UniformBufferObject.hpp  (+5 more)
Phronesis/Sources/Phronesis/Graphics/Platform/: GLFWWindow.cpp  GLFWWindow.hpp  SFMLRenderer.cpp  SFMLRenderer.hpp  SFMLWindow.cpp  SFMLWindow.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
Phronesis/Sources/Phronesis/Maths/: Matrix4.cpp  Matrix4.hpp  Vector2.cpp  Vector2.hpp  Vector2.inl  Vector3.cpp  Vector3.hpp  Vector3.inl
Phronesis/Sources/Phronesis/SceneManagement/: Camera.cpp  Camera.hpp  Component.cpp  Component.ext.hpp  Component.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp  Scenes.cpp  Scenes.hpp
Phronesis/Sources/Phronesis/Utilities/: ElapsedTime.cpp  ElapsedTime.hpp  String.cpp  String.hpp  Time.cpp  Time.hpp  TimeUpdate.cpp  TimeUpdate.hpp  TypeInfo.hpp
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters  main.cpp
Sandbox/Resources/Shaders/: compileshader.sh
Sandbox/Sources/: SandboxGame.cpp  SandboxGame.hpp  Scene1.cpp  Scene1.hpp  StdAfx.hpp  TestScript.cpp  TestScript.hpp  main.cpp
Sandbox/Sources/Core/: Game.hpp  SandboxGame.cpp  SandboxGame.hpp
SpaceTarget/: autocompile.bat  autocompilethenrun.bat  component.hpp  contact_listener_2d.cpp  contact_listener_2d.hpp  core.cpp  core.hpp  game_data.hpp  game_object_2d.cpp  gravitational_attraction.hpp  level_scene.cpp  main.cpp  object_spawner.cpp  object_spawner.hpp  player_controller.cpp  player_controller.hpp  portal.hpp  resource_manager.hpp  rigidbody_2d.cpp  rigidbody_2d.hpp  scene.cpp  scene.hpp  script_component.cpp  script_component.hpp  sprite.hpp  test_script.hpp
TestGame/: TestGame.vcxproj  TestGame.vcxproj.filters  main.cpp
TestGame/Resources/Shaders/: compileshader.bat
VisualStudio2015/: SpaceArrow.sln  SpaceArrow.vcxproj  SpaceArrow.vcxproj.filters  SpaceTarget.sln  SpaceTarget.vcxproj  SpaceTarget.vcxproj.filters  SpaceTargetCodeMap.dgml
assets/: plain.section  test.section
assets/animations/: blue_button.frame  roboegg.frame
assets/buttons/: blue_button.frame
assets/characters/: greenalien.frame
code/: main.cpp  phro_data.hpp  phro_game.cpp  phro_game.hpp  phro_state.cpp  phro_state.hpp  phro_state_stack.hpp
code/mechanics/: phro_character.cpp  phro_character.hpp  phro_section.cpp  phro_section.hpp  phro_tile.cpp  phro_tile.hpp  phro_world.cpp  phro_world.hpp
code/resourceshandling/: phro_anim_unit.cpp  phro_anim_unit.hpp  phro_animation_manager.hpp  phro_frame_info.cpp  phro_resource_manager.cpp
code/states/: phro_game_state.cpp  phro_game_state.hpp  phro_menu_state.cpp  phro_menu_state.hpp  phro_pause_state.cpp  phro_pause_state.hpp  phro_title_state.cpp  phro_title_state.hpp
code/structures/: phro_entity.cpp  phro_entity.hpp  phro_scene_node.cpp  phro_scene_node.hpp  phro_sprite_node.cpp  phro_sprite_node.hpp
spacearrow/: autocompile.bat  camera_2d.cpp  camera_2d.hpp  component.cpp  component.ext.hpp  component.hpp  contact_listener_2d.cpp  core.cpp  core.hpp  entity.cpp  entity.hpp  game_data.hpp  game_object.cpp  game_object.hpp  game_object_2d.hpp  game_scene.cpp  game_scene.hpp  gravitational_attraction.cpp  gravitational_attraction.hpp  level_scene.cpp  level_scene.hpp  main.cpp  object_spawner.cpp  object_spawner.hpp  player_controller.cpp  player_controller.hpp  portal.cpp  resource_manager.cpp  resource_manager.hpp  rigidbody_2d.cpp  rigidbody_2d.hpp  scene.cpp  scene.hpp  scene_handler.cpp  scene_handler.hpp  script_component.cpp  script_component.hpp  spacearrow.sln  spacearrow.vcxproj  spacearrow.vcxproj.filters  (+6 more)
